fix: update footer background color for improved contrast

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2188,7 +2188,7 @@ svg#play_icon:hover #triangle {
 --------------------------------*/
 
 .footer {
-  background: #359093;
+  background: #082f5e;
   color: #fff;
   padding-top: 80px;
   position: relative;
